src/EchoApp/manifests/echo-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
      tier: db
  template:
    metadata:
      labels:
        app: echo-app
        tier: db
    spec:
      containers:
      - name: echo-db
        image: mcr.microsoft.com/mssql/server:2017-latest
        ports:
        - containerPort: 80  
        volumeMounts:
          - mountPath: "/var/opt/mssql/data"
            name: db-storage          
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: echo-app-pv-claim
