src/EchoApp/manifests/echo-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-api-svc
spec:
  ports:
    - port: 8080
      targetPort: 80
      name: api
  selector:
    app: echo-app
    tier: back
  type: LoadBalancer
