src/EchoApp/manifests/echo-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-db-svc
spec:
  ports:
    - port: 1433
      targetPort: 1433
      name: db
  selector:
    app: echo-app
    tier: db
  type: ClusterIP
