src/EchoApp/manifests/echo-webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-webapp-svc
spec:
  ports:
    - port: 9000
      targetPort: 80
      name: web
  selector:
    app: echo-app
    tier: front
  type: ClusterIP
